--- a/index-en.html
+++ b/index-en.html
@@ -74,7 +74,10 @@ $(function(){
 <span>Ontology Specification Draft</span>
 </div>
 </div>     <div id="abstract"><h2>Abstract</h2><span class="markdown">
-This Demonstration Environments ontology is developed by Nie Wei a MPhil student at the Institute for Manufacturing, University of Cambridge. Email: wn230@cam.ac.uk</span>
+This Demonstration Environments ontology is developed by Nie Wei a MPhil student at the Institute for Manufacturing, University of Cambridge. Email: wn230@cam.ac.uk.
+Demonstration Environments (DEs) are essential tools for testing and demonstrating new technologies, products, and services, and reducing uncertainties and risks in the innovation process. However, the terminology used to describe these environments is inconsistent, leading to heterogeneity in defining and characterizing them. This makes it difficult to establish a universal understanding of DEs and to differentiate between the different types of DEs, including testbeds, pilot-plants, and living labs. Moreover, existing literature lacks a holistic view of DEs, with studies focusing on specific types of DEs and not offering an integrated perspective on their characteristics and applicability in different contexts. To address this gap, this study proposes an ontology for knowledge representation related to DEs. Using an ontology learning approach analyzing 3621 peer-reviewed journal articles, we develop a standardized framework for defining and characterizing DEs, providing a holistic view of these environments. The resulting ontology allows innovation managers and practitioners to select appropriate DEs for achieving their innovation goals, based on the characteristics and capabilities of the specific type of DE.
+
+</span>
 </div>
 <div id="toc"></div> 
 
