--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ To address this gap, this study proposes an ontology for knowledge representatio
 
 <!--INTRODUCTION SECTION-->
     <div id="introduction"><h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
+<span class="markdown"></span>
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
 <div id="ns" align="center">
